Minor edit on some config file. Change fonts for h1

--- a/config/enki.yml
+++ b/config/enki.yml
@@ -1,5 +1,5 @@
 title: G for Gavin
-url:   http://gavinlin.herokuapp.com
+url:   http://www.gavinlin.com
 author:
   name:    Gavin Lin			# For copyright notice and ATOM feeds
   email:   gavinlin@outlook.com # Exception emails will go here, and it is used in ATOM feeds
